# KORANI

./: .env.example  .gitignore  CLAUDE.md  README.md  config.api.yaml  config.safe-run.yaml  config.yaml  pyproject.toml  requirements.txt
KnowledgeBase/Documentation/DEVSIM/: README.md  VERSION
KnowledgeBase/Examples/DEVSIM/: README.md
src/korani/: __init__.py  cli.py  codeutil.py  config.py  engineer_debugger.py  evaluation_contract.py  figures.py  fulltext.py  jsonutil.py  llm.py  models.py  playbook.py  result_verification.py  runner.py  search.py  search_and_triage.py  spec_extraction.py  stage_b.py  stage_c.py  stage_d.py  stage_e.py  stage_f.py  storage.py
src/korani/agents/: __init__.py  debugger.py  engineer.py  evaluator.py  interpreter.py  paper_triage.py  proposer_critic.py  result_analyst.py  search_planner.py  spec_extractor.py
src/korani/knowledge/: __init__.py  base.py  devsim.py  pybamm.py  registry.py
src/korani/providers/: __init__.py  base.py  openalex.py  semanticscholar.py
tests/: test_fulltext.py  test_interpreter.py  test_paper_triage.py  test_providers.py  test_search.py  test_search_planner.py  test_spec_extractor.py  test_stage_c.py  test_storage.py
