[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "korani"
version = "0.1.0"
description = "KORANI — KISTI Open Research Agentic Network Intelligence"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.50",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pymupdf>=1.24",
]

[tool.setuptools.packages.find]
where = ["src"]
