[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "korani"
version = "0.1.0"
description = "KORANI — KISTI Open Research Agentic Network Intelligence"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.50",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "tenacity>=8.3",
    "devsim>=2.8",
    "mkl>=2026.1; platform_system == 'Windows'",
    "pybamm>=24.5",
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "faiss-cpu>=1.8",
    "rank-bm25>=0.2",
    "sentence-transformers>=3.0",
    "pymupdf>=1.24",
    "pymupdf4llm>=0.0.17",
]

[tool.setuptools.packages.find]
where = ["src"]
